--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,14 @@ spring.datasource.password=root1234
 
 server.port=3333
 server.servlet.context-path=/SpringBootRest
+
+#management.endpoints.web.exposure.include = info, mappings, beans
+management.endpoints.web.exposure.include = *
+
+info.name= Spring Boot Rest
+info.description= Spring Boot Rest application. \
+  This app is used for CRUD operations whis employees of our company
+info.auhtor= Stepan Vasilyev
+
+spring.security.user.name= user
+spring.security.user.password= user
